fix pass card wrapping

--- a/src/components/cards/PassCard/passcard.css
+++ b/src/components/cards/PassCard/passcard.css
@@ -67,13 +67,13 @@
   flex: 2;
   overflow: hidden;
   min-width: 200px;
-  padding-right: 50px;
 }
 
 .pass-card .pass-info-wrapper .group {
   width: 100%;
   align-items: center;
   display: flex;
+  flex-wrap: wrap;
   gap: 0.3rem;
   min-width: 0;
 }
